--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,9 @@
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+ .r{
+   
+ }
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
